[BUG #6524] Align Form page
* Minor style improvements Form layout.
* API doc completion

--- a/framework/source/resource/qx/mobile/less/color/_android.less
+++ b/framework/source/resource/qx/mobile/less/color/_android.less
@@ -389,7 +389,7 @@ input[type=radio] + label:after {
 //
 
 .selectbox {
-  color:@highlighted-text-color;
+  .clickable();
   background-color:transparent;
 }
 
